--- a/sass/abridge.scss
+++ b/sass/abridge.scss
@@ -20,7 +20,7 @@
   $enable-icons: true,// false disables ALL icons
   $ic: true,// true for colorized icons, otherwise #888 is used.
 
-  $icon-rss: true,
+  $icon-rss: false,
   $icon-mail: false,// e-mail
   $icon-mastodon: false,
   $icon-element: false,
