Add media to blog post about esp32c3 oled

--- a/sass/abridge.scss
+++ b/sass/abridge.scss
@@ -64,11 +64,11 @@
   $h2d: #606060,   // comments - dim
   $h3d: #ff6666,   // red - functions
   $h4d: #ffaa00,   // orange/amber - punctuation, constants
-  $h5d: #00ff88,   // mint - function names
-  $h6d: #88ff88,   // light green - strings
+  $h5d: #5ccc96,   // muted mint - function names
+  $h6d: #7ec699,   // soft sage green - strings
   $h7d: #00ffff,   // cyan - escape chars
   $h8d: #66aaff,   // blue - declarations
-  $h9d: #ff66ff,   // magenta - operators
+  $h9d: #c792ea,   // soft lavender - operators
   $had: 140%,
 
   // Keep system font for readability, monospace for code
